--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mysql": "^2.12.0",
+    "sequelize": "^3.29.0"
   },
   "devDependencies": {
     "dotenv": "^2.0.0"
