--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "chalk": "^1.1.3",
     "express": "^4.14.0",
+    "fs": "0.0.1-security",
     "mysql": "^2.12.0",
-    "sequelize": "^3.29.0"
+    "sequelize": "^3.29.0",
   },
   "devDependencies": {
     "dotenv": "^2.0.0"
