--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "chalk": "^1.1.3",
     "express": "^4.14.0",
     "fs": "0.0.1-security",
+    "log-timestamp": "^0.1.2",
     "mysql": "^2.12.0",
-    "sequelize": "^3.29.0",
+    "sequelize": "^3.29.0"
   },
   "devDependencies": {
     "dotenv": "^2.0.0"
