--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "url-shortener",
-  "version": "1.0.0",
-  "description": "URL Shortener",
-  "main": "src/server.js",
+  "name": "debugutil",
+  "version": "1.5.2",
+  "description": "Debug Utility Tool with Logging",
+  "main": "src/debug.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "DEBUG=true mocha"
   },
   "keywords": [
-    "URL",
-    "Shortener",
-    "API"
+    "Debug",
+    "Utility",
+    "Tool",
+    "Logging"
   ],
   "author": "Melony Smith",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0"
+    "chalk": "^1.1.3",
+    "log-timestamp": "^0.1.2"
   },
   "devDependencies": {
-    "dotenv": "^2.0.0"
+    "chai": "^3.5.0",
+    "eslint": "^3.13.1",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0"
+  },
+  "repository": {
+    "URL": "https://github.com/melonysmith/debugutil"
   }
 }
