--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "debugutil",
-  "version": "1.5.2",
-  "description": "Debug Utility Tool with Logging",
-  "main": "src/debug.js",
+  "name": "url-shortener",
+  "version": "1.0.0",
+  "description": "URL Shortener",
+  "main": "src/server.js",
   "scripts": {
-    "test": "DEBUG=true mocha"
+    "test": "test/__api.js"
   },
   "keywords": [
-    "Debug",
-    "Utility",
-    "Tool",
-    "Logging"
+    "URL",
+    "Shortener",
+    "API"
   ],
   "author": "Melony Smith",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "chai": "^3.5.0",
     "chalk": "^1.1.3",
-    "log-timestamp": "^0.1.2"
+    "dotenv": "^2.0.0",
+    "express": "^4.14.0",
+    "fs": "0.0.1-security",
+    "log-timestamp": "^0.1.2",
+    "mysql": "^2.12.0",
+    "sequelize": "^3.29.0",
+    "supertest": "^2.0.1"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "istanbul": "^0.4.5",
     "mocha": "^3.2.0"
-  },
-  "repository": {
-    "URL": "https://github.com/melonysmith/debugutil"
   }
 }
