--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "author": "Melony Smith",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.16.0",
     "chalk": "^1.1.3",
+    "dotenv": "^4.0.0",
+    "express": "^4.14.0",
     "log-timestamp": "^0.1.2"
   },
   "devDependencies": {
