--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "debugutil",
-  "version": "1.5.2",
+  "version": "1.6.0",
   "description": "Debug Utility Tool with Logging",
-  "main": "src/debug.js",
+  "main": "",
   "scripts": {
+    "start": "node src/server.js",
     "test": "DEBUG=true mocha"
   },
   "keywords": [
