--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "debugutil",
-  "version": "1.5.2",
+  "version": "1.6.0",
   "description": "Debug Utility Tool with Logging",
-  "main": "src/debug.js",
+  "main": "npm start",
   "scripts": {
+    "start": "node src/server.js",
     "test": "DEBUG=true mocha"
   },
   "keywords": [
@@ -16,13 +17,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.0",
+    "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
-    "log-timestamp": "^0.1.2"
+    "log-timestamp": "^0.1.2",
+    "mysql": "^2.12.0",
+    "sequelize": "^3.29.0",
+    "supertest": "^2.0.1"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
@@ -31,7 +35,4 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0"
   },
-  "repository": {
-    "URL": "https://github.com/melonysmith/debugutil"
-  }
 }
