--- a/package.json
+++ b/package.json
@@ -17,16 +17,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.0",
-    "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
-    "log-timestamp": "^0.1.2",
-    "mysql": "^2.12.0",
-    "sequelize": "^3.29.0",
-    "supertest": "^2.0.1"
+    "log-timestamp": "^0.1.2"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
@@ -34,5 +31,5 @@
     "eslint-plugin-react": "^6.9.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0"
-  },
+  }
 }
