--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "url-shortener",
-  "version": "1.0.0",
-  "description": "URL Shortener",
+  "name": "debugutil",
+  "version": "1.6.0",
+  "description": "Debug Utility Tool with Logging",
   "main": "src/server.js",
   "scripts": {
-    "test": "DEBUG=mocha",
-    "start": "npm start"
+    "start": "node src/server.js",
+    "test": "DEBUG=true mocha"
   },
   "keywords": [
-    "URL",
-    "Shortener",
-    "API"
+    "Debug",
+    "Utility",
+    "Tool",
+    "Logging"
   ],
   "author": "Melony Smith",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.16.0",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
-    "dotenv": "^2.0.0",
+    "dotenv": "^4.0.0",
     "express": "^4.14.0",
-    "fs": "0.0.1-security",
+    "fs": "^0.0.1-security",
     "log-timestamp": "^0.1.2",
+    "mocha": "^3.2.0",
     "mysql": "^2.12.0",
     "sequelize": "^3.29.0",
     "supertest": "^2.0.1"
+
   },
   "devDependencies": {
     "eslint": "^3.13.1",
@@ -32,6 +35,6 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "mocha": "^3.2.0"
+    "istanbul": "^0.4.5"
   }
 }
