--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "debugutil",
   "version": "1.6.0",
   "description": "Debug Utility Tool with Logging",
-  "main": "npm start",
+  "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
     "test": "DEBUG=true mocha"
@@ -17,19 +17,24 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.0",
+    "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
-    "log-timestamp": "^0.1.2"
+    "fs": "^0.0.1-security",
+    "log-timestamp": "^0.1.2",
+    "mocha": "^3.2.0",
+    "mysql": "^2.12.0",
+    "sequelize": "^3.29.0",
+    "supertest": "^2.0.1"
+
   },
   "devDependencies": {
-    "chai": "^3.5.0",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.2.0"
+    "istanbul": "^0.4.5"
   }
 }
