--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
-  "name": "debugutil",
-  "version": "1.6.0",
-  "description": "Debug Utility Tool with Logging",
-  "main": "src/server.js",
-  "scripts": {
-    "start": "node src/server.js",
-    "test": "DEBUG=true mocha"
-  },
-  "keywords": [
-    "Debug",
-    "Utility",
-    "Tool",
-    "Logging"
-  ],
-  "author": "Melony Smith",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.16.0",
-    "chai": "^3.5.0",
-    "chalk": "^1.1.3",
-    "dotenv": "^4.0.0",
-    "express": "^4.14.0",
-    "fs": "^0.0.1-security",
-    "log-timestamp": "^0.1.2",
-    "mocha": "^3.2.0",
-    "mysql": "^2.12.0",
-    "sequelize": "^3.29.0",
-    "supertest": "^2.0.1"
-
-  },
-  "devDependencies": {
-    "eslint": "^3.13.1",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
-    "istanbul": "^0.4.5"
-  }
+    "name": "debugutil",
+    "version": "1.6.1",
+    "description": "Debug Utility Tool with Logging",
+    "main": "src/server.js",
+    "scripts": {
+        "start": "node src/server.js",
+        "test": "DEBUG=true mocha"
+    },
+    "keywords": [
+        "Debug",
+        "Utility",
+        "Tool",
+        "Logging"
+    ],
+    "author": "Melony Smith",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.16.0",
+        "chai": "^3.5.0",
+        "chalk": "^1.1.3",
+        "dotenv": "^4.0.0",
+        "express": "^4.14.0",
+        "fs": "^0.0.1-security",
+        "gulp": "^3.9.1",
+        "gulp-git": "^1.12.0",
+        "gulp-json-editor": "^2.2.1",
+        "istanbul": "^0.4.5",
+        "log-timestamp": "^0.1.2",
+        "mocha": "^3.2.0",
+        "mysql": "^2.12.0",
+        "sequelize": "^3.29.0",
+        "supertest": "^2.0.1",
+        "yargs": "^6.6.0"
+    },
+    "devDependencies": {
+        "eslint": "^3.13.1",
+        "eslint-config-airbnb": "^14.0.0",
+        "eslint-plugin-import": "^2.2.0",
+        "eslint-plugin-jsx-a11y": "^3.0.2",
+        "eslint-plugin-react": "^6.9.0"
+    }
 }
